# Weeaboo-Buddy

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/: flow.yml
.github/workflows/: workflow.yml
notebooks/: Agent.ipynb  Api_Testing.ipynb  Tools_testing.ipynb
noteboooks/: Api_Testing.ipynb
pages/: account.py  chat.py  chat_options.py
src/: agent.py
src/agent/tools/: tools.py
src/app/: authentication.py  content.py
src/tools/: tools.py
