[project]
name = "weeaboo-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jikanpy-v4>=1.0.2",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.64",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
]
